--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
         "oyejorge/less.php": "~1.7",
         "leafo/lessphp": "~0.5"
     },
+    "autoload": {
+      "classmap": ["lib/"]
+    },
     "license": "GPL-2.0",
     "authors": [
         {
