--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -10,7 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    
+
+    - name: Install project dependencies
+      uses: php-actions/composer@v6
+
     - name: WordPress Plugin Deploy
       uses: 10up/action-wordpress-plugin-deploy@2.0.0
       env:
