Deploy on release, but test otherwise

--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -2,8 +2,6 @@ name: Deploy to wordress.org
 
 on:
   push:
-    tags:
-    - '*'
 
 jobs:
   publish:
@@ -15,6 +13,7 @@ jobs:
       uses: php-actions/composer@v6
 
     - name: WordPress Plugin Deploy
+      if: ${{ github.event_name == 'release' }}
       uses: 10up/action-wordpress-plugin-deploy@2.0.0
       env:
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
