--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -1,7 +1,6 @@
 name: Deploy to wordress.org
 
 on:
-  push:
   release:
     types:
       - published
@@ -10,13 +9,12 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
 
     - name: Install project dependencies
       uses: php-actions/composer@v6
 
     - name: WordPress Plugin Deploy
-      if: ${{ github.event_name == 'release' }}
       uses: 10up/action-wordpress-plugin-deploy@stable
       env:
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
